test/valid_codesnipsets/for_if.go
package main

import "fmt"

func main() {
    for true || !false {
        if false {

        } else {
            fmt.Println("foo")
            return
        }
    }
}