test/type_errors/missing_space2.go
package main 

import "fmt"

func main() {
    var iint= 3.0
    var b = i
}